# ArangoMapper

./: .gitignore  Dockerfile  README.es.md  README.md  config.py  docker-compose.db.yaml  docker-compose.runexample.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  run_examples.py  settings.py
app/: collections.py  main.py
app/aql/: aqlmanager.py  asyncaqlmanager.py  elements.py  operator.py  schemas.py  snippets.py  visitor.py
app/database/: aqlmanager.py  async_conn.py  async_manager.py  async_migrate.py  conn.py  manager.py  migrate.py
app/layer/: base.py
app/mapper/: base.py  expressions.py  meta.py  primitives.py  types.py
arangomapper/: __init__.py  collections.py
arangomapper/aql/: aqlmanager.py  async_aqlmanager.py  elements.py  operator.py  schemas.py  snippets.py
arangomapper/database/: async_conn.py  async_manager.py  async_migrate.py  conn.py  manager.py  migrate.py  schemas.py  utils.py
arangomapper/mapper/: base.py  expressions.py  meta.py  types.py
example/: async_example.py  models.py  read_1_basic.py  read_2_raw.py  read_3_advanced.py  setup.py  transaction.py  write.py
tests/: conftest.py  seeder.py  test_aqlmanager.py  test_async_aqlmanager.py  test_async_manager.py  test_async_migrate.py  test_expressions.py  test_imports.py  test_manager.py  test_meta.py  test_metaclass.py  test_migrate.py  test_transaction.py  utils.py
